--- a/package.json
+++ b/package.json
@@ -12,17 +12,21 @@
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-navigation-menu": "^1.2.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-visually-hidden": "^1.1.0",
     "@tanstack/react-query": "^5.59.9",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
+    "date-fns": "^3.6.0",
     "framer-motion": "^11.11.7",
     "lucide-react": "^0.451.0",
     "next": "14.2.15",
     "next-auth": "^5.0.0-beta.22",
     "react": "^18",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.3",
