--- a/.env
+++ b/.env
@@ -1,7 +1,6 @@
-# Environment variables declared in this file are automatically made available to Prisma.
-# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
+AUTH_GITHUB_ID=Ov23liZHUC64UTWQpp3n
+AUTH_GITHUB_SECRET=237e7b83b8b908ad06f70c06bf8d86de7d5e68d2
+DATABASE_URL=postgresql://postgres.wndgblwtxxakglobydhi:abhayCodemanPass@aws-0-ap-southeast-1.pooler.supabase.com:6543/postgres
+DIRECT_URL=postgres://postgres.wndgblwtxxakglobydhi:abhayCodemanPass@aws-0-ap-southeast-1.pooler.supabase.com:5432/postgres
+NEXT_AUTH_SECRET=YdRmlOQnFe4z7eXb0jw4JjKMJxmlVfZj2HWdGnQzU1I
 
-# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-
-DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
