--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-visually-hidden": "^1.1.0",
     "@tanstack/react-query": "^5.59.9",
     "@vercel/og": "^0.6.3",
+    "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
