--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "lucide-react": "^0.451.0",
     "next": "14.2.15",
     "next-auth": "^5.0.0-beta.22",
+    "octokit": "^4.0.2",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
