Gothub Auth Bug Fixed

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 AUTH_GITHUB_ID=Ov23liZHUC64UTWQpp3n
 AUTH_GITHUB_SECRET=237e7b83b8b908ad06f70c06bf8d86de7d5e68d2
-DATABASE_URL=postgresql://postgres.wndgblwtxxakglobydhi:abhayCodemanPass@aws-0-ap-southeast-1.pooler.supabase.com:6543/postgres
-DIRECT_URL=postgres://postgres.wndgblwtxxakglobydhi:abhayCodemanPass@aws-0-ap-southeast-1.pooler.supabase.com:5432/postgres
 NEXT_AUTH_SECRET=YdRmlOQnFe4z7eXb0jw4JjKMJxmlVfZj2HWdGnQzU1I
 NEXT_PUBLIC_APP_URL=http://localhost:3000
+DATABASE_URL="postgresql://postgres.wndgblwtxxakglobydhi:abhayCodemanPass@aws-0-ap-southeast-1.pooler.supabase.com:6543/postgres?pgbouncer=true"
+DIRECT_URL="postgresql://postgres.wndgblwtxxakglobydhi:abhayCodemanPass@aws-0-ap-southeast-1.pooler.supabase.com:5432/postgres"
