--- a/.env
+++ b/.env
@@ -2,6 +2,5 @@ AUTH_GITHUB_ID=Ov23liZHUC64UTWQpp3n
 AUTH_GITHUB_SECRET=237e7b83b8b908ad06f70c06bf8d86de7d5e68d2
 NEXT_AUTH_SECRET=YdRmlOQnFe4z7eXb0jw4JjKMJxmlVfZj2HWdGnQzU1I
 NEXT_PUBLIC_APP_URL=http://localhost:3000
-DATABASE_URL=postgres://postgres.pzmlkaesomcvwmzadvug:abhayCodemnaPass@aws-0-us-west-1.pooler.supabase.com:6543/postgres
-DIRECT_URL=postgres://postgres.pzmlkaesomcvwmzadvug:abhayCodemnaPass@aws-0-us-west-1.pooler.supabase.com:5432/postgres
-
+DATABASE_URL=postgres://postgres.pzmlkaesomcvwmzadvug:abhayCodemnaPass@aws-0-us-west-1.pooler.supabase.com:6543/postgres?pgbouncer=true&pgbouncerPreparedStatements=false
+DIRECT_URL=postgres://postgres.pzmlkaesomcvwmzadvug:abhayCodemnaPass@aws-0-us-west-1.pooler.supabase.com:5432/postgres?pgbouncer=true&pgbouncerPreparedStatements=false
