Listening to WebHook

--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ NEXT_AUTH_SECRET=YdRmlOQnFe4z7eXb0jw4JjKMJxmlVfZj2HWdGnQzU1I
 NEXT_PUBLIC_APP_URL=http://localhost:3000
 DATABASE_URL=postgres://postgres.pzmlkaesomcvwmzadvug:abhayCodemnaPass@aws-0-us-west-1.pooler.supabase.com:6543/postgres?pgbouncer=true&pgbouncerPreparedStatements=false
 DIRECT_URL=postgres://postgres.pzmlkaesomcvwmzadvug:abhayCodemnaPass@aws-0-us-west-1.pooler.supabase.com:5432/postgres?pgbouncer=true&pgbouncerPreparedStatements=false
+GEMINI_API_KEY=AIzaSyBjDR2VLpih6kw6UOOANwUiyknDKAOb01M
