--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.0",
+    "@auth/supabase-adapter": "^1.7.0",
     "@google/generative-ai": "^0.21.0",
     "@prisma/client": "^5.20.0",
     "@radix-ui/react-accordion": "^1.2.1",
@@ -24,6 +25,7 @@
     "@radix-ui/react-switch": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.2",
     "@radix-ui/react-visually-hidden": "^1.1.0",
+    "@supabase/supabase-js": "^2.45.4",
     "@tanstack/react-query": "^5.59.9",
     "@vercel/og": "^0.6.3",
     "axios": "^1.7.7",
