--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "next": "15.0.3",
     "next-auth": "^4.24.10",
     "nextjs-toploader": "^3.7.15",
+    "ngrok": "^5.0.0-beta.2",
     "prisma": "^5.22.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
